external-crates/move/crates/move-compiler/tests/move_2024/typing/dot_call_private.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/dot_call_private.move:16:5
   │
 5 │ fun f(_self: &X) {}
   │     - This function is internal to its module. Only 'public' and 'public(package)' functions can be called outside of their module
   ·
16 │     x.f();
   │     ^^^^^ Invalid call to internal function '0x42::t::f'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/dot_call_private.move:17:5
   │
 5 │ fun f(_self: &X) {}
   │     - This function is internal to its module. Only 'public' and 'public(package)' functions can be called outside of their module
   ·
17 │     y.x.f();
   │     ^^^^^^^ Invalid call to internal function '0x42::t::f'
